select boxes are now sorted alphabetically

--- a/www/css.css
+++ b/www/css.css
@@ -1,39 +1,47 @@
 body {
-	color: #EEEEEE;
-	background-color: #000000;
+	color: #000000;
+	background-color: #FFFFFF;
 }
 
 a:link {
-	color: #EEEEEE;
+	color: #000000;
 	text-decoration: none;
 }
 
 a:visited {
-	color: #EEEEEE;
+	color: #000000;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #EEEEEE;
+	color: #000000;
 	text-decoration: underline;
 }
 
 a:active {
-	color: #EEEEEE;
+	color: #000000;
 	text-decoration: none;
 }
 
 table#results {
 	border-collapse: collapse;
-	border: 1px solid #333333;
+	border: 1px solid #AAAAAA;
 }
 
 td#results {
-	border-top: 1px solid #333333;
-	border-bottom: 1px solid #333333;
+	border-top: 1px solid #AAAAAA;
+	border-bottom: 1px solid #AAAAAA;
 	padding: 3px;
 }
 
 td#show {
 	padding: 5px;
+}
+
+input {
+	border: 1px solid #AAAAAA;
+}
+
+select {
+	border: 1px solid #AAAAAA;
 }
