--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
 <html>
-
 <body>
-
 
 {% if item_list %}
 	There are {{ item_list|length }} Items in the database.
     <table border="1">
     <tr><td>id</td><td>name</td></tr>
     {% for item in item_list %}
-        <tr><td>{{ item.id }}</td><td>{{ item.name }}</td></tr>
+        <tr><td>{{ item.id }}</td><td><a href="showitem?id={{ item.id }}">{{ item.name }}</a></td></tr>
     {% endfor %}
     </table>
 {% else %}
@@ -17,5 +15,4 @@
 {% endif %}
 
 <body>
-
 <html>
