--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
+{% load staticfiles %}
 <!DOCTYPE HTML>
 <html>
+<link rel="stylesheet" href="{% static "css.css" %}" type="text/css">
 <body>
 
 {% if item_list %}
