--- a/templates/searchform.html
+++ b/templates/searchform.html
@@ -13,8 +13,10 @@ function doSearch() {
 
 	var bonus1id = document.getElementById("bonus1").selectedIndex;
 
+	var bonus2id = document.getElementById("bonus2").selectedIndex;
+
 	// if the form is empty, clear the result table
-	if(itemname.length == 0 && slot.length == 0 && bonus1id == 0) {
+	if(itemname.length == 0 && slot.length == 0 && bonus1id == 0 && bonus2id == 0) {
 		//console.log("clearing result table");
 
 		// get a handle to the result table
@@ -87,6 +89,9 @@ function clearForm() {
 	var bonus1 = document.getElementById("bonus1");
 	bonus1.options[0].selected = true;
 
+	var bonus2 = document.getElementById("bonus2");
+	bonus2.options[0].selected = true;
+
 	var itemname = document.getElementById("itemname");
 	itemname.value = "";
 
@@ -106,6 +111,7 @@ $(document).ready(function() {
     // add handlers for changes to the drop-down boxes
 	document.getElementById("slot").onchange = function() {doSearch()};
 	document.getElementById("bonus1").onchange = function() {doSearch()};
+	document.getElementById("bonus2").onchange = function() {doSearch()};
 
     // add a handler for the clear button
 	document.getElementById("clear").onclick = function() {clearForm()};
@@ -132,7 +138,7 @@ $(document).ready(function() {
 {% endfor %}
 {% endif %}
 </select>
-</td> </tr>
+</td></tr>
 
 <!-- bonus 1-->
 <tr><td>Bonus:</td>
@@ -145,9 +151,26 @@ $(document).ready(function() {
 {% endfor %}
 {% endif %}
 </select>
-</td> </tr>
+</td></tr>
+
+<!-- bonus 2-->
+<tr><td>Bonus:</td>
+<td>
+<select name="bonus2" id="bonus2">
+<option value="">-</option>
+{% if bonus_list %}
+{% for bonus in bonus_list %}
+<option value="{{ bonus.id }}">{{ bonus.name }}</option>
+{% endfor %}
+{% endif %}
+</select>
+</td></tr>
+
 </table>
+
+<!-- clear form button -->
 <button type="button" id="clear">Clear</button>
+
 </form>
 
 <!-- this table will display the query result -->
