moved searchform to index view

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,9 @@
 <body>
 
 <div id="header">
-<div id="logo"> <!--<img src="{% static "daocitemdb.png" %}" /> --> </div>
-<div id="tag">daocitemdb</div>
+<!-- <div id="logo"> <img src="{% static "daocitemdb.png" %}" /> </div> -->
+<!-- <div id="tag">daocitemdb</div> -->
+daocitemdb - a searchable item database for the MMORPG Dark Age of Camelot
 </div>
 
 <div id="wrapper">
